Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -2,4 +2,6 @@
 
 This development is an extension of my work to port the Norad SGP4 and SDP4 satellite prediction algorithms to Java which can be found in the [http://code.google.com/p/predict4java predict4java] project, which is also hosted on Google Code.
 
-It is to a large extent, a learning platform for me so that I can get experience of the various Google development and run-time tools.
+I am also developing an Android satellite prediction programme on behalf of AMSAT-UK, which has the name AMSATrac, the source-code for which, can be found [http://code.google.com/p/amsatrac here] on Google Code.
+
+To a large extent, these projects are a learning platform for me so that I can get experience of the various Google development and run-time tools.
